2007-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m (+initialize): Create titleCell here to have
	it available for browsers loaded from Gorm files.
	* Source/NSBrowser.m (GSBrowserTitleCell): Add method
	drawingRectForBounds: and correct drawWithFrame:inView:.
	* Source/NSBrowser.m (-displayAllColumns, -displayColumn:): Mark
	for redraw. 
	
2007-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-draggingUpdated:): Use
	currentDropOperation instead of NSTableViewDropAbove.
	* Source/NSDocument.m (-windowForSheet): Return nil instead of
	mainWindow, when there is no associated window.
	Patches by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-10-30  Adam Fedor  <fedor@gnu.org>

        * gnustep-gui.spec.in: Change Copyright to License.

2007-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* COPYING: Add GPL file.
	* Change all files to use GPL 3 and LGPL 3.
	* Prepare for next release.
	
2007-10-28 01:44-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: reverted change to validateEditing to 
	correct crashes.  

2007-10-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableHeaderView.m (-drawRect:): Switch drawing cases for 
	flipping. 
	* Source/NSTableView.m (GSTableCornerView): Made flipped and
	adjust drawing code.

2007-10-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-setPrintInfo:, -runPageLayout:): Move
	updateChangeCount: call from one method to the other.
	* Source/NSPageLayout.m (-okButtonClicked:,
	-cancelButtonClicked:): Use standard button return codes.
	* Source/NSTableView.m (-validateEditing): Initialize
	newObjectValue with nil.
	Patches by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-10-06 23:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h
	* Source/GNUmakefile: Added new classes.
	* Source/NSNibAXAttributeConnector.m
	* Source/NSNibAXRelationshipConnector.m
	* Source/NSNibBindingConnector.m: Implementation of special